# openmp-examples

./: CMakeLists.txt
Matrix/: CMakeLists.txt
avrage-reduction/: CMakeLists.txt
data-sharing/: CMakeLists.txt
heap-vs-stack/: CMakeLists.txt
hello-mp/: CMakeLists.txt
integral/: CMakeLists.txt
linkedlist/: CMakeLists.txt
parallel-loop-1/: CMakeLists.txt
scheduling/: CMakeLists.txt
